<resources>
    <string name="app_name">Bluetooth Scanner</string>
    <string name="register">Register</string>
    <string name="sign_in">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="error">An error occurred!</string>
    <string name="create_user_success">User created successfully!</string>
    <string name="error_enter_email">Please enter valid email address</string>
    <string name="error_enter_password">Please enter valid password</string>
    <string name="no_devices_found">No devices found!</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="enable_bluetooth">Please turn-on bluetooth</string>
    <string name="start_search">Search for devices</string>
    <string name="stop_search">Stop searching</string>
    <string name="reset_password_success">You will receive an email with instruction to reset password</string>
</resources>
